--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "Pierre Baillet",
   "license": "BSD",
-   "dependencies": {
+  "dependencies": {
     "express": "~3.3.8",
     "ejs": "~0.8.5",
     "nosql": "~2.0.3",
@@ -31,7 +31,8 @@
     "send": "~0.1.4",
     "webshot": "~0.8.2",
     "favicon": "0.0.2",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "formidable": "~1.0.14"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
