--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,6 @@
   "dependencies": {
     "dropzone": "~3.8.2",
     "sjcl": "~1.0.0",
-    "highlightjs": "~7.5.0"
+    "highlightjs": "8.0.0"
   }
 }
